force-app/main/default/objects/os_Request__c/os_Request__c.object-meta.xml
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <label>Inquiry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>