force-app/main/default/objects/os_Request__c/fields/Agency_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Inquiry_Type__c</fullName>
    <label>Agency Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B Buyers</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>International Agency</fullName>
            </value>
            <value>
                <fullName>Buyers</fullName>
            </value>
            <value>
                <fullName>B2B Sellers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>