force-app/main/default/objects/os_Request__c/fields/Agent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agent_Feedback__c</fullName>
    <label>Agent Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>