force-app/main/default/objects/os_Request__c/fields/Agent_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Full_Name__c</fullName>
    <label>Agent Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>