force-app/main/default/objects/os_Request__c/fields/Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Agent_Mobile__c</fullName>
    <label>Agent Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>