force-app/main/default/objects/os_Request__c/fields/AML_Count__c.field-meta.xml
<CustomField>
    <fullName>AML_Count__c</fullName>
    <label>AML Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>