force-app/main/default/objects/os_Request__c/fields/Area_Familiarity__c.field-meta.xml
<CustomField>
    <fullName>Area_Familiarity__c</fullName>
    <label>Area Familiarity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>