force-app/main/default/objects/os_Request__c/fields/Assign_Owner_using_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Assign_Owner_using_Assignment_Rules__c</fullName>
    <label>Assign Owner using Assignment Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>