force-app/main/default/objects/os_Request__c/fields/ATR_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>ATR_Outcome_Date__c</fullName>
    <label>Develpment Projects Outcome Date</label>
    <type>DateTime</type>
</CustomField>