force-app/main/default/objects/os_Request__c/fields/B2B_Agent__c.field-meta.xml
<CustomField>
    <fullName>B2B_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>