force-app/main/default/objects/os_Request__c/fields/B2B_Buyers_Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>B2B_Buyers_Agent_Mobile__c</fullName>
    <label>B2B Buyer&apos;s Agent Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>