force-app/main/default/objects/os_Request__c/fields/B2B_Buyers_Gender__c.field-meta.xml
<CustomField>
    <fullName>B2B_Buyers_Gender__c</fullName>
    <label>B2B Buyer&apos;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>FeMale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>