force-app/main/default/objects/os_Request__c/fields/B2B_Buyers_Nationality__c.field-meta.xml
<CustomField>
    <fullName>B2B_Buyers_Nationality__c</fullName>
    <label>B2B Buyer&apos;s Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>