force-app/main/default/objects/os_Request__c/fields/Backup_Location_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Backup_Location_Temporary__c</fullName>
    <label>Backup Location (Temporary)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>