force-app/main/default/objects/os_Request__c/fields/Buying_Reason__c.field-meta.xml
<CustomField>
    <fullName>Buying_Reason__c</fullName>
    <label>Buying Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>To Live In</fullName>
            </value>
            <value>
                <fullName>Additional Residence</fullName>
            </value>
            <value>
                <fullName>Investor/To Let</fullName>
            </value>
            <value>
                <fullName>Land Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>