force-app/main/default/objects/os_Request__c/fields/Campaign_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campaign_UTM__c</fullName>
    <label>Campaign UTM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>