force-app/main/default/objects/os_Request__c/fields/Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source__c</fullName>
    <label>Channel Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Portal Inquiry</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SMS campaign</fullName>
            </value>
            <value>
                <fullName>Social Media Inquiry</fullName>
            </value>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Desktop Form</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Direct contact</fullName>
            </value>
            <value>
                <fullName>Luxhabitat China (legacy)</fullName>
            </value>
            <value>
                <fullName>Luxhabitat Office</fullName>
            </value>
            <value>
                <fullName>Luxhabitat Russia (legacy)</fullName>
            </value>
            <value>
                <fullName>Mobile Form</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>meta</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>twitter</fullName>
            </value>
            <value>
                <fullName>youtube</fullName>
            </value>
            <value>
                <fullName>snapchat</fullName>
            </value>
            <value>
                <fullName>tiktok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>