force-app/main/default/objects/os_Request__c/fields/CHO_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>CHO_Email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHO Email sent</label>
    <type>Checkbox</type>
</CustomField>