force-app/main/default/objects/os_Request__c/fields/Client_was_Interested__c.field-meta.xml
<CustomField>
    <fullName>Client_was_Interested__c</fullName>
    <label>Client was Interested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>