force-app/main/default/objects/os_Request__c/fields/Community_Propertybase__c.field-meta.xml
<CustomField>
    <fullName>Community_Propertybase__c</fullName>
    <label>Community Propertybase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>