force-app/main/default/objects/os_Request__c/fields/Community_Tenacre_Custom__c.field-meta.xml
<CustomField>
    <fullName>Community_Tenacre_Custom__c</fullName>
    <label>Community Tenacre Custom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Akoya</fullName>
            </value>
            <value>
                <fullName>Al Barari</fullName>
            </value>
            <value>
                <fullName>Al Jaddaf</fullName>
            </value>
            <value>
                <fullName>Al Jafiliya</fullName>
            </value>
            <value>
                <fullName>Al Khail Heights</fullName>
            </value>
            <value>
                <fullName>Al Kifaf</fullName>
            </value>
            <value>
                <fullName>Al Manara</fullName>
            </value>
            <value>
                <fullName>Al Mina</fullName>
            </value>
            <value>
                <fullName>Al Sufouh</fullName>
            </value>
            <value>
                <fullName>Al Twar</fullName>
            </value>
            <value>
                <fullName>Al Warqa&apos;a</fullName>
            </value>
            <value>
                <fullName>Al Wasl</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches 2</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches 3</fullName>
            </value>
            <value>
                <fullName>Arjan</fullName>
            </value>
            <value>
                <fullName>Bawadi</fullName>
            </value>
            <value>
                <fullName>Bluewaters</fullName>
            </value>
            <value>
                <fullName>Bur Dubai</fullName>
            </value>
            <value>
                <fullName>Business Bay</fullName>
            </value>
            <value>
                <fullName>City of Arabia</fullName>
            </value>
            <value>
                <fullName>City Walk</fullName>
            </value>
            <value>
                <fullName>Culture Village</fullName>
            </value>
            <value>
                <fullName>DAMAC Hills (Akoya by DAMAC)</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Downtown Dubai</fullName>
            </value>
            <value>
                <fullName>Downtown Jebel Ali</fullName>
            </value>
            <value>
                <fullName>Dragon City</fullName>
            </value>
            <value>
                <fullName>Dubai Creek Harbour (The Lagoons)</fullName>
            </value>
            <value>
                <fullName>Dubai Design District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>