force-app/main/default/objects/os_Request__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(  os_Contact__r.pba__SystemIsIndividual__c  , &apos;n/a&apos; , HYPERLINK(&quot;/&quot; &amp;  os_Account__c  ,  os_Account__r.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>