force-app/main/default/objects/os_Request__c/fields/create_Update_contact__c.field-meta.xml
<CustomField>
    <fullName>create_Update_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create / Update Contact (Email Parsing)</label>
    <type>Checkbox</type>
</CustomField>