force-app/main/default/objects/os_Request__c/fields/Created_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_User_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created User Profile</label>
    <type>Text</type>
</CustomField>