force-app/main/default/objects/os_Request__c/fields/Days_since_Last_Activity_Logged__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Activity_Logged__c</fullName>
    <formula>NOW()-  Last_Activity_Logged_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Activity Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>