force-app/main/default/objects/os_Request__c/fields/Department_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Department_Bucket__c</fullName>
    <label>Department Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Offplan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>