force-app/main/default/objects/os_Request__c/fields/Desired_Viewing_Dates_1__c.field-meta.xml
<CustomField>
    <fullName>Desired_Viewing_Dates_1__c</fullName>
    <label>Desired Viewing Dates 1</label>
    <type>Date</type>
</CustomField>