force-app/main/default/objects/os_Request__c/fields/Dock__c.field-meta.xml
<CustomField>
    <fullName>Dock__c</fullName>
    <label>Dock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>