force-app/main/default/objects/os_Request__c/fields/Entered_Offering__c.field-meta.xml
<CustomField>
    <fullName>Entered_Offering__c</fullName>
    <label>Entered Offering</label>
    <type>DateTime</type>
</CustomField>