force-app/main/default/objects/os_Request__c/fields/Entered_Searching__c.field-meta.xml
<CustomField>
    <fullName>Entered_Searching__c</fullName>
    <label>Entered Searching</label>
    <type>DateTime</type>
</CustomField>