force-app/main/default/objects/os_Request__c/fields/Entered_Viewing__c.field-meta.xml
<CustomField>
    <fullName>Entered_Viewing__c</fullName>
    <label>Entered Viewing</label>
    <type>DateTime</type>
</CustomField>