force-app/main/default/objects/os_Request__c/fields/Estated_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Estated_Valuation__c</fullName>
    <label>Estated Valuation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>