force-app/main/default/objects/os_Request__c/fields/Expiry_Count__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Count__c</fullName>
    <label>Expiry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>